Fixed logo and gap between navigation bar and page content (and page sidebar)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -420,6 +420,15 @@
 
 @media(min-width:768px) {
     .td-main main {
-        padding-top: 5.5rem
+        padding-top: 2rem
+    }
+}
+
+@media(min-width:768px) {
+    .td-sidebar {
+        padding-top: 0.5rem;
+        background-color: rgba(48, 99, 142, .03);
+        padding-right: 1rem;
+        border-right: 1px solid #dee2e6
     }
 }
